--- a/manifest.yml
+++ b/manifest.yml
@@ -11,11 +11,12 @@ applications:
   timeout: 180
   env:
     # Set your CF API endpoint - usually the same CF instance you're deploying to
-    CF_API_ENDPOINT: https://api.your-cf-domain.com
-    # Set credentials directly in manifest (NOT recommended for production)
-    # CF_USERNAME: admin
-    # CF_PASSWORD: your-password-here
-    # CF_SKIP_SSL_VALIDATION: false
-  command: ./tpcf-usage-service --server --verbose
-  # routes:
-  # - route: tpcf-usage-service.apps.your-cf-domain.com  # Optional: CF will auto-generate if not specified
+    CF_API_ENDPOINT: https://api.sys.tas.7dd6b553.shepherd.tanzu.broadcom.net
+    # Use variables from cf push --var flags
+    CF_USERNAME: ((CF_USERNAME))
+    CF_PASSWORD: ((CF_PASSWORD))
+    CF_SKIP_SSL_VALIDATION: ((CF_SKIP_SSL_VALIDATION))
+    # Force server mode for CF deployment
+    TPCF_SERVER_MODE: "true"
+    TPCF_VERBOSE: "true"
+  command: ./bin/tpcf-usage-service
